2009-03-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Clean up code.
	
	* lib/svplib/io.sl, 
	* include/svp/io.slh,	
	* include/svp/iomacros.slh: Use the "f" parameter/argument form
	where applicable.

	* doc/spec.txt: Fix typo.

2009-03-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More language specification, as requested by UH.
	
	* doc/spec.txt: List external document references. Add
	glossary. Clarify thread function type compatibility. List
	referenced CSA notes explicitly. Add missing definition of SVP
	constants. Include io.slh and iomacros.slh litterally to document
	the library. Document svp_assert better. Document svp/lib.slh.

	* doc/Makefile.am: Update accordingly.
	
	* include/std/io.slh: Document.

	* include/std/assert.slh,
	* include/std/iomacros.slh: Clean up macros.
	
	* include/std/io.slh: Move argslot definition to...
	* include/std/argslot.slh: here.
	* include/cstddef.slh,
	* include/cstdint.slh: Implement.

	* Makefile.am: Update accordingly.
	
2009-03-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Code cleanup. Add more svn:ignore patterns.
	
	* bin/Makefile.am (cce sgr slc): Remove extraneous use of mkdir.

2009-03-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More documentation.
	
	* doc/README.txt: Update with additional references.
	
	* doc/NEWS.txt: Document last two batches of major changes.
	
	* doc/HACKING.txt: Document maintainer mode. Document additional
	requirements for developer. Document using scripts without
	installing. Document distribution.

	* doc/lang.txt: Remove section about library since this is now
	covered by the separate specification.

	* Makefile.am (NEWS): Copy from src/NEWS.txt.

2009-03-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add missing directory creation in maintainer mode.
	
 	* Makefile.am (include/slc_*.m4): Create the "include" directory
	in case it was not created before.

2009-03-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Correct paths in included dirs.
	